--- a/gallery.html
+++ b/gallery.html
@@ -7,15 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <header>
-    <a href="../../index.html" class="icon-link">
-    <i class="fa-solid fa-circle-left"></i>
-    Home
+    <header>
+  <a href="index.html" class="icon-link">
+    <i class="fa-solid fa-house"></i> Home
   </a>
-    <h1>Project Gallery</h1>
-    <p>Explore my work across UX, branding, and creative technology.</p>
-  </header>
+  <h1><!-- Gallery: "Project Gallery" | Project: set via JS --></h1>
+  <p>Explore my work across UX, branding, and creative technology.</p>
+</header>
   <main>
     <div class="bento-gallery" id="gallery-list">
       <!-- Bento items rendered here -->
