--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
           I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design. Fascinated by innovation and technology, I explored various fields. Recently, I've worked as an interface designer and manager with global companies such as Wayfair, HP, Stanley Black & Decker, and SanDisk Corporation.
         </p>
       </section>
-        <section id="experience" class="section">
-          <div class="section-title">
-            Experience
-         <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="icon-link">
-           <i class="fa-solid fa-circle-down" aria-hidden="true"></i> Download my CV </a>
-          </div>
-          <ul id="experience-list" class="experience-list"></ul>
-        </section>
+      <section id="experience" class="section">
+        <div class="section-title">
+          Experience
+          <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="icon-link">
+            <i class="fa-solid fa-circle-down" aria-hidden="true"></i> Download my CV
+          </a>
+        </div>
+        <ul id="experience-list" class="experience-list"></ul>
+      </section>
 
       <section id="work" class="section">
         <div class="section-title">UX Projects
