--- a/project.html
+++ b/project.html
@@ -11,16 +11,19 @@
   <script src="https://kit.fontawesome.com/3ff078e01b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="project-container">
-  <!-- also use relative link here ! -->
-  <a href="../../index.html" class="icon-link">
-    <i class="fa-solid fa-circle-left"></i>
-    Home
+<header>
+  <a href="index.html" class="icon-link">
+    <i class="fa-solid fa-house"></i> Home
   </a>
+  <h1 id="project-title">Project Title Loading...</h1>
+  <p>Explore my work across UX, branding, and creative technology.</p>
+</header>
+<div class="project-container">
   <div id="project-content">
     <p style="text-align: center; padding: 60px 20px;">Loading project...</p>
   </div>
 </div>
+
 
 <script>
   const urlParams = new URLSearchParams(window.location.search);
