--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <section id="work" class="section">
         <div class="section-title">UX Projects
           <a href="gallery.html" class="icon-link">
-            <i class="fa-solid fa-circle-down" aria-hidden="true"></i> View all projects
+            <i class="fa-solid fa-swatchbook" aria-hidden="true"></i> View all projects
           </a>
         </div>
         <div class="selected-work" id="projects-list"></div>
