--- a/gallery.html
+++ b/gallery.html
@@ -5,12 +5,14 @@
   <title>Gallery · Roie Shalom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/3ff078e01b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
   <a href="index.html" class="icon-link">
-    <i class="fa-solid fa-house"></i> Home
-  </a>
+  <i class="fa-solid fa-house"></i> Home
+</a>
   <h1><!-- Gallery: "Project Gallery" | Project: set via JS --></h1>
   <p>Explore my work across UX, branding, and creative technology.</p>
 </header>
