--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gallery · Roie Shalom</title>
+  <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Sans:wght@400;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/3ff078e01b.js" crossorigin="anonymous"></script>
@@ -44,5 +45,6 @@
   });
 
   </script>
+  <script src="theme.js"></script>
 </body>
 </html>
