--- a/project.html
+++ b/project.html
@@ -11,9 +11,17 @@
 </head>
 <body>
 <header>
- <a href="index.html" class="icon-link">
-  <i class="fa-solid fa-house"></i> Home
-</a>
+
+<nav>
+  <a href="index.html" class="icon-link nav-link">
+    Home
+  </a>
+    <span class="nav-link nav-separator">/</span>
+  <a href="gallery.html" class="icon-link nav-link">
+    Gallery
+  </a>
+</nav>
+
 
   <h1 id="project-title">Project Title Loading...</h1>
   <p>Explore my work across UX, branding, and creative technology.</p>
