--- a/gallery.html
+++ b/gallery.html
@@ -10,22 +10,25 @@
 </head>
 
 <body>
-    <header>
-  <a href="index.html" class="icon-link">
-  <i class="fa-solid fa-house"></i> Home
-</a>
+  <header>
+    <nav>
+      <a href="index.html" class="icon-link">
+        <i class="fa-solid fa-house"></i> Home
+      </a>
+    </nav>
+
   <h1><!-- Gallery: "Project Gallery" | Project: set via JS --></h1>
   <p>Explore my work across UX, branding, and creative technology.</p>
-</header>
-  <main>
+  </header>
+<main>
     <div class="bento-gallery" id="gallery-list">
       <!-- Bento items rendered here -->
     </div>
-  </main>
-  <footer>
+</main>
+<footer>
     <!-- your site/footer info -->
-  </footer>
-  <script>
+</footer>
+<script>
    fetch('data/projects.json')
   .then(res => res.json())
   .then(projects => {
@@ -43,8 +46,7 @@
   .catch(error => {
     console.error(error);
   });
-
-  </script>
-  <script src="theme.js"></script>
+</script>
+<script src="theme.js"></script>
 </body>
 </html>
