--- a/project.html
+++ b/project.html
@@ -14,11 +14,11 @@
 
 <nav>
   <a href="index.html" class="icon-link nav-link">
-    Home
+    <i class="fa-solid fa-house"></i>Home
   </a>
     <span class="nav-link nav-separator">/</span>
   <a href="gallery.html" class="icon-link nav-link">
-    Gallery
+    <i class="fa-solid fa-house"></i>Gallery
   </a>
 </nav>
 
