--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
   </a>
     <span class="nav-link nav-separator">/</span>
   <a href="gallery.html" class="icon-link nav-link">
-    <i class="fa-solid fa-house"></i>Gallery
+    <i class="fa-solid fa-swatchbook"></i>Gallery
   </a>
 </nav>
 
