--- a/project.html
+++ b/project.html
@@ -14,11 +14,11 @@
 
 <nav>
   <a href="index.html" class="icon-link nav-link">
-    <i class="fa-solid fa-house"></i>Home
+  Home
   </a>
     <span class="nav-link nav-separator">/</span>
   <a href="gallery.html" class="icon-link nav-link">
-    <i class="fa-solid fa-swatchbook"></i>Gallery
+  Gallery
   </a>
 </nav>
 
