removed nav icons2

--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
   Home
   </a>
     <span class="nav-link nav-separator">/</span>
-  <a href="gallery.html" class="icon-link nav-link">
+  <a href="gallery.html" class="nav-link">
   Gallery
   </a>
 </nav>
