--- a/gallery.html
+++ b/gallery.html
@@ -12,8 +12,8 @@
 <body>
   <header>
     <nav>
-      <a href="index.html" class="icon-link">
-        <i class="fa-solid fa-house"></i> Home
+      <a href="index.html" class="nav-link">
+      Home
       </a>
     </nav>
 
