nav links hover

--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html" class="nav-link">
+      <a href="index.html" class="back-nav-link">
       Home
       </a>
     </nav>
