--- a/project.html
+++ b/project.html
@@ -13,11 +13,11 @@
 <header>
 
 <nav>
-  <a href="index.html" class="icon-link nav-link">
+  <a href="index.html" class="back-nav-link">
   Home
   </a>
-    <span class="nav-link nav-separator">/</span>
-  <a href="gallery.html" class="nav-link">
+    <span class="back-nav-link">/</span>
+  <a href="gallery.html" class="back-nav-link">
   Gallery
   </a>
 </nav>
