--- a/project.html
+++ b/project.html
@@ -13,14 +13,11 @@
 <header>
 
 <nav>
-  <a href="index.html" class="back-nav-link">
-  Home
-  </a>
-    <span class="back-nav-link">/</span>
-  <a href="gallery.html" class="back-nav-link">
-  Gallery
-  </a>
+  <a href="index.html" class="back-nav-link">Home</a>
+  <a href="slash.html" class="back-nav-link slash-link">/</a>
+  <a href="gallery.html" class="back-nav-link">Gallery</a>
 </nav>
+
 
 
   <h1 id="project-title">Project Title Loading...</h1>
