--- a/slash.html
+++ b/slash.html
@@ -63,7 +63,7 @@
     }
     h2 {
       font-size: 2em;
-      color: #e91e63;
+      color: var(--color-text);
       font-weight: 700;
       margin-bottom: 28px;
       margin-top: -30px;
