gallery thumbs, title consistent styling

--- a/gallery.html
+++ b/gallery.html
@@ -18,15 +18,13 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="index.html" class="back-nav-link">
-        Home
-      </a>
-    </nav>
-    <h1><!-- Gallery: "Project Gallery" | Project: set via JS --></h1>
-    <p>Explore my work across UX, branding, and creative technology.</p>
-  </header>
+      <header>
+      <nav>
+        <a href="index.html" class="back-nav-link">Home</a>
+      </nav>
+      <h1 id="project-title"><strong>Project Gallery</strong> Creative Work Showcase</h1>
+      <p id="project-desc">Featuring selected projects in UX, branding, and creative technology.</p>
+    </header>
   <main>
     <div class="bento-gallery" id="gallery-list">
       <!-- Bento items rendered here -->
