missing project name on HP

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <a href="project.html?id=${proj.id}" class="work-item">
             <img class="work-thumb" src="${proj.thumbnail}" alt="${proj.title} thumbnail">
             <div class="work-details">
-              <div class="exp-role">${proj.title}</div>
+              <div class="exp-role">${proj.title_bold}</div>
               <p class="work-desc">${proj.shortdesc}</p>
             </div>
           </a>
