gallery_desc added

--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@ gallery.innerHTML = projects.map(proj => `
     <div class="tile-label">
       <strong>${proj.title_bold}</strong> ${proj.title_regular}
     </div>
-    <div class="tile-desc">${proj.shortdesc}</div>
+    <div class="tile-desc">${proj.gallery_desc}</div>
   </div>
 </a>
 
