side projects, removed left side description

--- a/index.html
+++ b/index.html
@@ -35,21 +35,23 @@
           <span class="brand" id="desktop-brand">Roie Shalom</span>
           <span class="role" id="desktop-role">Product Design Lead</span>
         </div>
-        <p class="sidebar-bio">
-          Welcome to my personal website! Here you can find my projects, past experience, and some other experiments I'm running.
-        </p>
         <nav class="sidebar-nav">
           <a href="#about" class="nav-link active">About me</a>
           <a href="#experience" class="nav-link">Experience</a>
           <a href="#work" class="nav-link">Projects</a>
         </nav>
-        <div style="margin-top:42px;"></div>
+        <div style="margin-top:36px;"></div>
         <section class="sidebar-fun" id="desktop-fun">
-          <div class="fun-title">Fun things</div>
+          <div class="fun-title">Theme</div>
           <div id="theme-controls" style="margin-top: 8px; margin-bottom: 18px;">
             <a href="#" id="theme-light">Light</a> |
             <a href="#" id="theme-dark">Dark</a> |
             <a href="#" id="theme-auto">Auto</a>
+          </div>
+          <div style="margin-top:36px;" class="fun-title">Side projects</div>
+
+          <div id="theme-controls" style="margin-top: 8px; margin-bottom: 18px;">
+
           </div>
           <div class="textContent">
             <span class="exp-desc">More coming soon...</span>
