2 side project+styling

--- a/index.html
+++ b/index.html
@@ -48,11 +48,33 @@
             <a href="#" id="theme-dark">Dark</a> |
             <a href="#" id="theme-auto">Auto</a>
           </div>
-          <div style="margin-top:36px;" class="fun-title">Side projects</div>
-
+        <div style="margin-top:36px;"></div>
+        <section class="sidebar-fun" id="desktop-fun">
+          <div class="fun-title">Side Projects</div>
           <div id="theme-controls" style="margin-top: 8px; margin-bottom: 18px;">
+            <ul class="side-project-list">
+              <li>
+                <a href="https://www.fragen-katalog.com/" target="_blank" class="sideproject-link">
+                  <img src="content/images/side_projects/fk_thumb.png" class="sideproject-icon" alt="Icon" />
+                  <div class="sideproject-textblock">
+                    <span class="exp-company">Fragen Katalog</span>
+                    <span class="exp-desc">German Einburgerung test practice</span>
+                  </div>
+                </a>
+              </li>
+               <li>
+                <a href="https://www.b1wortschatz.de/" target="_blank" class="sideproject-link">
+                  <img src="content/images/side_projects/b1w_thumb.png" class="sideproject-icon" alt="Icon" />
+                  <div class="sideproject-textblock">
+                    <span class="exp-company">B1 Wortschatz</span>
+                    <span class="exp-desc">German Voabulary flashcards</span>
+                  </div>
+                </a>
+              </li>
+            </ul>
+        </div>
 
-          </div>
+
           <div class="textContent">
             <span class="exp-desc">More coming soon...</span>
           </div>
