--- a/index.html
+++ b/index.html
@@ -62,12 +62,21 @@
                   </div>
                 </a>
               </li>
-               <li>
+              <li>
                 <a href="https://www.b1wortschatz.de/" target="_blank" class="sideproject-link">
                   <img src="content/images/side_projects/b1w_thumb.png" class="sideproject-icon" alt="Icon" />
                   <div class="sideproject-textblock">
                     <span class="exp-company">B1 Wortschatz</span>
                     <span class="exp-desc">German Voabulary flashcards</span>
+                  </div>
+                </a>
+              </li>
+                            <li>
+                <a href="https://roieshalom.github.io/disclaimer-jar/" target="_blank" class="sideproject-link">
+                  <img src="content/images/side_projects/dj_thumb.png" class="sideproject-icon" alt="Icon" />
+                  <div class="sideproject-textblock">
+                    <span class="exp-company">Disclamer Jar</span>
+                    <span class="exp-desc">Made a disclamer? put a coin in</span>
                   </div>
                 </a>
               </li>
