--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         const homepageProjects = projects.filter(proj => proj.homepage);
         const container = document.getElementById('projects-list');
         container.innerHTML = homepageProjects.map(proj => `
-          <a href="project.phtml?id=${proj.id}" class="work-item">
+          <a href="project.php?id=${proj.id}" class="work-item">
             <img class="work-thumb" src="${proj.thumbnail}" alt="${proj.title} thumbnail">
             <div class="work-details">
               <div class="exp-role">${proj.title_bold}</div>
