--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   </script>
   <meta charset="UTF-8">
   <title>Gallery · Roie Shalom</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon-prod.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Sans:wght@400;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
