--- a/slash.html
+++ b/slash.html
@@ -21,7 +21,7 @@
       justify-content: center;
       align-items: center;
       background: #fafafa;
-      font-family: 'Inter', Arial, sans-serif;
+      font-family: 'Albert Sans', Arial, sans-serif;
     }
 
     nav {
