--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </aside>
     <main class="main-content">
       <section id="about" class="section">
-        <div class="section-title">About</div>
+        <div class="section-title">XAbout</div>
         <p>
           I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design. Fascinated by innovation and technology, I explored various fields. Recently, I've worked as an interface designer and manager with global companies such as Wayfair, HP, Stanley Black & Decker, and SanDisk Corporation.
         </p>
