--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
         <div style="margin-top:36px;"></div>
         <section class="sidebar-fun" id="desktop-fun">
-          <div class="fun-title">Side Projects</div>
+          <div class="fun-title">AI Side Projects</div>
           <div id="theme-controls" style="margin-top: 8px; margin-bottom: 18px;">
             <ul class="side-project-list">
               <li>
