added connections to AI side projects

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           <div id="theme-controls" style="margin-top: 8px; margin-bottom: 18px;">
             <ul class="side-project-list">
               <li>
+                <a href="https://roieshalom.github.io/connections/" target="_blank" class="sideproject-link">
+                  <img src="content/images/side_projects/con_thumb.png" class="sideproject-icon" alt="Icon" />
+                  <div class="sideproject-textblock">
+                    <span class="exp-company">Connections game</span>
+                    <span class="exp-desc">Make 4 word groups</span>
+                  </div>
+                </a>
+              </li>
+              <li>
                 <a href="https://www.fragen-katalog.com/" target="_blank" class="sideproject-link">
                   <img src="content/images/side_projects/fk_thumb.png" class="sideproject-icon" alt="Icon" />
                   <div class="sideproject-textblock">
